--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "cheerio" : "~0.22.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
@@ -16,6 +17,7 @@
     "node-exiftool": "^2.0.0",
     "pug": "^2.0.0-beta6",
     "randomstring": "^1.1.5",
+    "request" : "~2.79.0",
     "serve-favicon": "~2.3.0"
   }
 }
